# article-capture

./: .env.example  .gitignore  README.md  netlify.toml  pyproject.toml  render.yaml
netlify/functions/: capture.mjs  capture.py  requirements.txt
scripts/: write-config.mjs
src/: app.py  config.py  errors.py  models.py  notion_store.py  pipeline.py  summarizer.py
src/extractors/: article.py  base.py  registry.py  youtube.py
static/: config.js  index.html
tests/: test_registry.py  test_summarizer.py  test_youtube.py
