[project]
name = "knowledge-pipeline"
version = "0.1.0"
description = "Paste a URL -> fetch/transcribe -> summarize with Claude -> store in Notion."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "trafilatura>=1.12",
    "google-genai>=2.0",
    "anthropic>=0.40",
    "notion-client>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
